Fixes blog search button alignment at tablet portrait orientation

--- a/css/widgets-blog.less
+++ b/css/widgets-blog.less
@@ -96,6 +96,13 @@
 
 		    position: relative;
 		    top: 0px;
+
+		    @media only screen 
+			and (min-device-width : 768px) 
+			and (max-device-width : 1024px) 
+			and (orientation : portrait) {
+				top: 20px;
+			}
         }
     }
 }
